# JuDDGES

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker_ingest.py  dvc.yaml  index.html  pyproject.toml  requirements.txt  requirements_unsloth.txt  robots.txt  search.json  settings.ini  setup.bat  setup.py  setup.sh  sitemap.xml  test_weaviate_vectorizers.py
.dvc/: config
.github/workflows/: ghp-deploy.yaml  nbdev-test.yaml  python.yaml
Data/: analyse_en_dataset.html  analyse_sft.html  analyze_en_judgements_texts.html  dataset_description.html  graph_analysis.html  graph_dataset_description.html  hybrid_search.html  prepare_instruction_dataset_for_ir.html
Dataset Cards/: 03_Graph_Description.html  dataset_description_instruct.html  dataset_description_raw.html
Presentations/: workshop_demo.html
configs/: annotate_data.yaml  annotate_data_en_appealcourt.yaml  embedding.yaml  fine_tuning.yaml  llm_judge.yaml  peft_fine_tuning.yaml  preannotate_label_studio.yaml  predict.yaml  predict_vllm.yaml  predict_with_api.yaml  universal_embedding.yaml  upload_with_preannotation.yaml
configs/api_llm/: llama_3.1_8b_instruct.yaml
configs/api_model/: gpt_4.1.yaml  gpt_4.1_mini.yaml  gpt_4o_mini.yaml  llama_3.1_8b_instruct.yaml  llama_3_8b_instruct_q8_0.yaml
configs/dataset/: en-appealcourt-coded-instruct.yaml  en-court-instruct.yaml  en_appealcourt_coded.yaml  pl-court-frankowe-instruct.yaml  pl-court-instruct.yaml  pl-court-raw.yaml  pl_court_personal_rights.yaml  pl_court_swiss_franc_loans.yaml  pl_court_swiss_franc_loans_annotated.yaml
configs/datasets/: AI-TAX_pl-eureka-raw-sample.yaml  AI-TAX_pl-eureka-raw.yaml  JuDDGES_en-court-raw-sample.yaml  JuDDGES_en-court-raw.yaml  JuDDGES_pl-court-raw-sample.yaml  JuDDGES_pl-court-raw.yaml  JuDDGES_pl-nsa-sample.yaml  JuDDGES_pl-nsa.yaml
dashboards/: analyse_extracted_information.py  app.py  extract_information_from_judgements.py  linie_orzecznicze.py  search_judgements.py  ⚖️_Project_Information.py
data/: .gitignore  dummy_file.txt.dvc
dev_notebooks/: 1_nsa.ipynb  1_nsa_update_analysis.ipynb  2_analys_preds_personal_rights.ipynb  2_nsa_extraction.ipynb  3_compare_llm_results.ipynb  3_nsa_update_analysis.ipynb  4_compare_llm_results.ipynb  4_compare_llms_personal_rights.ipynb  4_refine_judge_prompt.ipynb  analyse_en_dataset.ipynb  analyse_franc_loans_annotated.ipynb  analyse_llm_as_judge.ipynb  analyse_pl_swiss_franc_loans.ipynb  analyse_pl_swiss_franc_loans.ipynb.ipynb  analyse_swiss_frank_dataset.ipynb  compare_with_gemini.ipynb  schema_construction_agents.ipynb
docs/: DOCUMENT_SCHEMA_MAPPING.md  INGESTION_GUIDE.md  STREAMING_INGESTER.md  UNIVERSAL_INGESTION.md  data_acquisition_nsa.md  data_acquisition_pl_court.md  embeddings_deploy_weaviate.md  embeddings_embed_and_ingest_weaviate.md  iterative_refinment.md
examples/: REFACTORING_RECOMMENDATIONS.md  api_response_format.py  cli_demo_pl_court_raw.sh  collection_analytics.py  demo_pl_court_raw.py  enhanced_ingester_interface.py  ingestion_config_example.py  model_based_analytics.py  pl_court_raw_config_example.yaml  show_smart_mapping.py  simple_streaming_ingestion.py  simulated_workflow.py  transformation_system_example.py  typescript_style_analytics.py  universal_ingestion_example.py
juddges/: _modidx.py  config.py  data_models.py  defaults.py  exception.py  llms.py  schema.py  settings.py
juddges/data/: cli.py  (+28 more)
label_studio_toolkit/: annotator.py
nbs/: index.ipynb  nbdev.yml  sidebar.yml
nginx/: Dockerfile  auth.conf  launch.sh
notebooks/: 1_analyse_dataset.ipynb  2_analyse_text.ipynb  3_lcel_synth_legis_data_gen.ipynb  3_synth_qa_gen_prep.ipynb  5_synth_qa_dataset.ipynb
prefect/: docker-compose.yaml  update_pl_court.dockerfile
scripts/: README.md  __init__.py  build_fine_tuning_dataset.py  check_memory_max_sequence.py  dataset_manager.py  download_pl_additional_data.py  download_pl_content.py  download_pl_metadata.py  dump_pl_dataset.py  embed_text.py  extract_pl_text.py  extract_pl_xml.py  fine_tune_llm.py  gen_synthetic_judgements_qa.py  get_juddgements_sample.py  graph_use_case.py  run_dummy.py
slurm/: .example.env  README.md  build_apptainer.sh  fine_tuning_env.dockerfile  run_command.sh  run_on_cluster.sh  test_apptainer.sh  test_docker_container.sh
tests/: test_config_loads.py  test_context_truncator.py  test_evaluation_parser.py  test_evaluation_structured.py  test_graph_example.py  test_hf_utils.py  test_judgges.py  test_nsa_data.py  test_synthetic_qa_pairs_dto.py  test_utils_date_utils.py
vllm_deploy/: deploy.sh
weaviate/: README.md  docker-compose.yaml  example.env  hf_transformers.dockerfile  setup_docker.sh
(+458 files in other folders)
